added image watermark

--- a/index.html
+++ b/index.html
@@ -110,15 +110,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-5">
-					<div class="slides">
-						<img src="images/_MG_9358 copy 1.JPG" alt="Image" class="img-fluid active">
-						<img src="images/_MG_9358 copy 1.JPG" alt="Image" class="img-fluid">
-						<img src="images/_MG_9358 copy 1.JPG" alt="Image" class="img-fluid">
-						<img src="images/_MG_9358 copy 1.JPG" alt="Image" class="img-fluid">
-						<img src="images/_MG_9358 copy 1.JPG" alt="Image" class="img-fluid">
-					</div>
-				</div>
+				
 			</div>
 		</div>
 	</div>
@@ -143,7 +135,7 @@
 
 					<div class="feature-1 d-md-flex">
 						<div class="align-self-center">
-							<span class="flaticon-house display-4 text-primary"></span>
+							<span class="flaticon-plane display-4 text-primary"></span>
 							<h3></h3>
 							<p class="mb-0">Nairobi, Amboseli, Lewa, Maasai Mara</p>
 						</div>
@@ -151,7 +143,7 @@
 
 					<div class="feature-1 ">
 						<div class="align-self-center">
-							<span class="flaticon-house display-4 text-primary"></span>
+							<span class="flaticon-plane display-4 text-primary"></span>
 							<h3></h3>
 							<p class="mb-0">Nairobi, Lewa, Maasai Mara
 							</p>
@@ -164,7 +156,7 @@
 
 					<div class="feature-1 d-md-flex">
 						<div class="align-self-center">
-							<span class="flaticon-house display-4 text-primary"></span>
+							<span class="flaticon-plane display-4 text-primary"></span>
 							<h3></h3>
 							<p class="mb-0">Nairobi, Amboseli, Samburu</p>
 						</div>
@@ -172,7 +164,7 @@
 
 					<div class="feature-1 d-md-flex">
 						<div class="align-self-center">
-							<span class="flaticon-house display-4 text-primary"></span>
+							<span class="flaticon-plane display-4 text-primary"></span>
 							<h3></h3>
 							<p class="mb-0">Nairobi, Lewa, Rift Valley, Maasai mara</p>
 							<p class="mb-0">Nairobi, Amboseli, Lewa, Rift valley</p>
