--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 			</div>
 			<div class="row align-items-stretch">
 				<div class="col-lg-4 order-lg-1">
-					<div class="h-100"><div class="frame h-100"><div class="feature-img-bg h-100" style="background-image: url('images/_MG_9643\ copy.JPG');"></div></div></div>
+					<div class="h-100"><div class="frame h-100"><div class="feature-img-bg h-100" style="background-image: url('images/_MG_9643.JPG');"></div></div></div>
 				</div>
 
 				<div class="col-6 col-sm-6 col-lg-4 feature-1-wrap d-md-flex flex-md-column order-lg-1" >
@@ -273,7 +273,7 @@
 					<div class="owl-single owl-carousel no-nav">
 						<div class="testimonial mx-auto">
 							<figure class="img-wrap">
-								<img src="images/person_2.jpg" alt="Image" class="img-fluid">
+								<img src="images/deer head logo.png" alt="Image" class="img-fluid">
 							</figure>
 							<h3 class="name">Jane Mwangi</h3>
 							<blockquote>
@@ -283,7 +283,7 @@
 
 						<div class="testimonial mx-auto">
 							<figure class="img-wrap">
-								<img src="images/person_3.jpg" alt="Image" class="img-fluid">
+								<img src="images/deer head logo.png" alt="Image" class="img-fluid">
 							</figure>
 							<h3 class="name">James Njoroge</h3>
 							<blockquote>
@@ -293,7 +293,7 @@
 
 						<div class="testimonial mx-auto">
 							<figure class="img-wrap">
-								<img src="images/person_4.jpg" alt="Image" class="img-fluid">
+								<img src="images/dee" alt="Image" class="img-fluid">
 							</figure>
 							<h3 class="name">Elaine Musyoka</h3>
 							<blockquote>
