--- a/services.html
+++ b/services.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="Untree.co">
+  <meta name="author" content="Guiding on a safari makes all the difference in the experience
+   clients get. Whether staying on high end properties or just the very basic camping">
   <link rel="shortcut icon" href="favicon.png">
 
   <meta name="description" content="" />
