--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 					<h2 class="section-title text-center mb-3">Planning</h2>
 					<p>We focus on giving you safari experience worth your money and of a lifetime
 						We offer different packages to suit different interest and budget.
+						We're selling guided safaris.
 						The set examples are;</p>
 				</div>
 			</div>
@@ -232,8 +233,8 @@
 				<div class="item">
 					<a class="media-thumb" href="images/DSC_1564.jpg" data-fancybox="gallery">
 						<div class="media-text">
-							<h3>Amboseli</h3>
-							<span class="location">Coast</span>
+							<h3>Ol'Pejeta</h3>
+							<span class="location">Laikipia</span>
 						</div>
 						<img src="images/DSC_1564.jpg" alt="Image" class="img-fluid">
 					</a> 
@@ -242,7 +243,7 @@
 				<div class="item">
 					<a class="media-thumb" href="images/DSC_0979.jpg" data-fancybox="gallery">
 						<div class="media-text">
-							<h3>MT.Kenya</h3>
+							<h3>Mt.Kenya</h3>
 							<span class="location">Kenya</span>
 						</div>
 						<img src="images/DSC_0979.jpg" alt="Image" class="img-fluid">
@@ -286,15 +287,15 @@
 							<figure class="img-wrap">
 								<img src="images/deer head logo.png" alt="Image" class="img-fluid">
 							</figure>
-							<h3 class="name">James Njoroge</h3>
+							<h3 class="name">Peter Conor</h3>
 							<blockquote>
-								<p>&ldquo;Tom Njogu Safaris turned our vacation into a remarkable journey, where every moment was thoughtfully curated&rdquo;</p>
+								<p>&ldquo;Unforgettable memories were crafted by Tom Njogu Safaris, turning our trip into an extraordinary tale&rdquo;</p>
 							</blockquote>
 						</div>
 
 						<div class="testimonial mx-auto">
 							<figure class="img-wrap">
-								<img src="images/dee" alt="Image" class="img-fluid">
+								<img src="images/deer head logo.png" alt="Image" class="img-fluid">
 							</figure>
 							<h3 class="name">Elaine Musyoka</h3>
 							<blockquote>
@@ -457,7 +458,7 @@
 						</span>
 						<div class="d-flex align-items-center">
 							<div>
-								<h3><a href="#">Mt.Kilimanjaro</a></h3>
+								<h3><a href="#">Lewa</a></h3>
 								<div class="price ml-auto">
 									
 								</div>
@@ -516,7 +517,7 @@
 						Savanah grasslands. My curiosity on animals planted a seed in me that would
 						come to be my Job, career, hobby and simply my lifestyle. I have been guiding
 						people on safari for over seventeen years. Passionately the curiosity never ends
-						as every day on safari is different. </p>
+						as every day on safari is different.Kenya is very rich in Flora and Fauna </p>
 
 					<p class="mb-4">Guiding on a safari makes all the difference in the experience clients get. Whether
 						staying on high end properties or just the very basic camping.</p>
