--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
             staying on high end properties or just the very basic camping.</p>
           <ul class="list-unstyled two-col clearfix">
             <li>Amboseli</li>
-            <li>Massai Mara</li>
+            <li>Masai Mara</li>
             <li>Samburu</li>
             <li>Sheldricks’ elephant sanctuary</li>
             <li>Lewa wildlife conservancy</li>
