--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 												<option value="">Mt.Kilimanjaro</option>
 												<option value="">Mt.Kenya</option>
 												<option value="">Great Rift Valley</option>
-												<option value="">Massai Mara</option>
+												<option value="">Masai Mara</option>
 												<option value="">Sheldricks’ elephant sanctuary</option>
 												
 											</select>
@@ -420,7 +420,7 @@
 						</span>
 						<div class="d-flex align-items-center">
 							<div>
-								<h3><a href="#">Massai Mara</a></h3>
+								<h3><a href="#">Masai Mara</a></h3>
 								<div class="price ml-auto">
 									
 								</div>
@@ -651,7 +651,7 @@
 			})
 
 			var typed = new Typed('.typed-words', {
-				strings: ["Lewa."," Amboseli."," Massai Mara.", " Mt.Kilimanjaro.", " The Great Rift Valley."],
+				strings: ["Lewa."," Amboseli."," Masai Mara.", " Mt.Kilimanjaro.", " The Great Rift Valley."],
 				typeSpeed: 80,
 				backSpeed: 80,
 				backDelay: 4000,
