--- a/services.html
+++ b/services.html
@@ -154,7 +154,7 @@
             <a href="#" class="d-block mb-3"><img src="images/_MG_9088 copy.jpg" alt="Image" class="img-fluid"></a>
             <div class="d-flex">
               <div>
-                <h3><a href="#">Massai Mara</a></h3>
+                <h3><a href="#">Masai Mara</a></h3>
                 <p>From the magical landscape of Lewa we take you to the great Masai Mara.
                   The vast plains of the mara are the theater for big cats, resident and migrant wild
                   beast and tones of other plain game. Four nights is kind of standard stay to
