corrected masai mara spelling

--- a/index.html
+++ b/index.html
@@ -137,17 +137,17 @@
 
 					<div class="feature-1 d-md-flex">
 						<div class="align-self-center">
-							<span class="flaticon-plane display-4 text-primary"></span>
+							<span class="icon-room mr-3"></span>
 							<h3></h3>
-							<p class="mb-0">Nairobi, Amboseli, Lewa, Maasai Mara</p>
+							<p class="mb-0">Nairobi, Amboseli, Lewa, Masai Mara</p>
 						</div>
 					</div>
 
 					<div class="feature-1 ">
 						<div class="align-self-center">
-							<span class="flaticon-plane display-4 text-primary"></span>
+							<span class="icon-room mr-3"></span>
 							<h3></h3>
-							<p class="mb-0">Nairobi, Lewa, Maasai Mara
+							<p class="mb-0">Nairobi, Lewa, Masai Mara
 							</p>
 						</div>
 					</div>
@@ -158,7 +158,7 @@
 
 					<div class="feature-1 d-md-flex">
 						<div class="align-self-center">
-							<span class="flaticon-plane display-4 text-primary"></span>
+							<span class="icon-room mr-3"></span>
 							<h3></h3>
 							<p class="mb-0">Nairobi, Amboseli, Samburu</p>
 						</div>
@@ -166,9 +166,9 @@
 
 					<div class="feature-1 d-md-flex">
 						<div class="align-self-center">
-							<span class="flaticon-plane display-4 text-primary"></span>
+							<span class="icon-room mr-3"></span>
 							<h3></h3>
-							<p class="mb-0">Nairobi, Lewa, Rift Valley, Maasai mara</p>
+							<p class="mb-0">Nairobi, Lewa, Rift Valley, Masai mara</p>
 							<p class="mb-0">Nairobi, Amboseli, Lewa, Rift valley</p>
 						</div>
 					</div>
