--- a/services.html
+++ b/services.html
@@ -189,7 +189,7 @@
 				<div class="col-md-12">
 					<h2 class="mb-2 text-white">TOM NJOGU SAFARIS</h2>
 					<p class="mb-4 lead text-white text-white-opacity">We focus on giving you safari experience worth your money and of a lifetime.</p>
-					<p class="mb-0"><a href="booking.html" class="btn btn-outline-white text-white btn-md font-weight-bold">Get in touch</a></p>
+					<p class="mb-0"><a href="#" class="btn btn-outline-white text-white btn-md font-weight-bold">Get in touch</a></p>
 				</div>
 			</div>
 		</div>
