--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 					<a class="media-thumb" href="images/DSC_1608.jpg" data-fancybox="gallery">
 						<div class="media-text">
 							<h3></h3>
-							<span class="location"> Sheldricks’ elephant sanctuary</span>
+							<span class="location"> Nanyuki</span>
 						</div>
 						<img src="images/DSC_1608.jpg" alt="Image" class="img-fluid">
 					</a> 
@@ -479,7 +479,7 @@
 
 						<div class="d-flex align-items-center">
 							<div>
-								<h3><a href="#"> Endangered grevys Zebra</a></h3>
+								<h3><a href="#"> Common Zebra</a></h3>
 								<div class="price ml-auto">
 									
 								</div>
