--- a/about.html
+++ b/about.html
@@ -70,8 +70,8 @@
             <h1 class="mb-0">About Us</h1>
             <p class="text-white">Having been born in Nanyuki, right on the slopes of Mt Kenya and brought up in a
               farmland adjacent to Mt Kenya forest. I grew up watching and interacting with
-              wildlife on a daily basis through out my young age. On my way to school and back
-              at home, from elephants, Giraffes, ostriches and all plain game found in the
+              wildlife on a daily basis through out my young age. On our way to and from school,
+              we came across from elephants, Giraffes, ostriches and all plain game found in the
               Savanah grasslands. My curiosity on animals planted a seed in me that would
               come to be my Job, career, hobby and simply my lifestyle. I have been guiding
               people on safari for over seventeen years. Passionately the curiosity never ends
