--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 					<div class="owl-single owl-carousel no-nav">
 						<div class="testimonial mx-auto">
 							<figure class="img-wrap">
-								<img src="images/deer head logo.png" alt="Image" class="img-fluid">
+								<img src="images/logopip.jpg" alt="Image" class="img-fluid">
 							</figure>
 							<h3 class="name">Jane Mwangi</h3>
 							<blockquote>
@@ -285,7 +285,7 @@
 
 						<div class="testimonial mx-auto">
 							<figure class="img-wrap">
-								<img src="images/deer head logo.png" alt="Image" class="img-fluid">
+								<img src="images/logopip.jpg" alt="Image" class="img-fluid">
 							</figure>
 							<h3 class="name">Peter Conor</h3>
 							<blockquote>
@@ -295,7 +295,7 @@
 
 						<div class="testimonial mx-auto">
 							<figure class="img-wrap">
-								<img src="images/deer head logo.png" alt="Image" class="img-fluid">
+								<img src="images/logopip.jpg" alt="Image" class="img-fluid">
 							</figure>
 							<h3 class="name">Elaine Musyoka</h3>
 							<blockquote>
