--- a/services.html
+++ b/services.html
@@ -96,7 +96,7 @@
         </div>
         <div class="col-6 col-md-6 col-lg-3">
           <div class="media-1">
-            <a href="#" class="d-block mb-3"><img src="images/DSC_1865.jpg" alt="Image" class="img-fluid"></a>
+            <a href="#" class="d-block mb-3"><img src="images/DSC_0473.jpg" alt="Image" class="img-fluid"></a>
             <div class="d-flex">
               <div>
                 <h3><a href="#">Amboseli National Park</a></h3>
@@ -126,14 +126,14 @@
         </div>
         <div class="col-6 col-md-6 col-lg-3">
           <div class="media-1">
-            <a href="#" class="d-block mb-3"><img src="images/DSC_1608.jpg" alt="Image" class="img-fluid"></a>
+            <a href="#" class="d-block mb-3"><img src="images/DSC_1865.jpg" alt="Image" class="img-fluid"></a>
             <div class="d-flex">
               <div>
-                <h3><a href="#">Lewa Game Park</a></h3>
+                <h3><a href="#">Lewa Conservancy</a></h3>
                 <p>After days in a vehicle doing
                   gamrdrives at lewa there are activities like horse & camel rides and walking
                   safaris, there is no better way in African bush than walking. While at lewa you
-                  could also have a chance to visit a Maasai for a cultural experience with one of
+                  could also have a chance to visit a Maasai VILLAGE for a cultural experience with one of
                   the communities that still have some of their traditional ways of life. Three nights
                   here allows you enough time to settle and absorb the beauty of conservation
                   work</p>
