--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
         <a href="index.html" class="logo m-0">Tom Njogu Safaris <span class="text-primary">.</span></a>
 
         <ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu float-right">
-          <li class="active"><a href="index.html">Home</a></li>
+          <li ><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="services.html">Where we take you</a></li>
           
