--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Guiding on a safari makes all the difference in the experience
    clients get. Whether staying on high end properties or just the very basic camping">
-  <link rel="shortcut icon" href="favicon.png">
+  <link rel="shortcut icon" href="images/logopip.jpg">
 
   <meta name="description" content="" />
   <meta name="keywords" content="bootstrap, bootstrap4" />
