--- a/index.html
+++ b/index.html
@@ -278,9 +278,13 @@
 							<figure class="img-wrap">
 								<img src="images/logopip.jpg" alt="Image" class="img-fluid">
 							</figure>
-							<h3 class="name">Jane Mwangi</h3>
+							<h3 class="name">Kelvin Shelton</h3>
 							<blockquote>
-								<p>&ldquo;Tom Njogu Safaris made our adventure unforgettable, combining expert guidance with immersive experiences.&rdquo;</p>
+								<p>&ldquo;Tom, your knowledge. experience, enthusiasm and profesionalism
+									will be missed at Lewa, 
+									but it will take you far in your new endeavour.You leave behind
+									a great team with big shoes to fill. Now ,let's start Planning
+									our next safari together  &rdquo;</p>
 							</blockquote>
 						</div>
 
@@ -288,21 +292,15 @@
 							<figure class="img-wrap">
 								<img src="images/logopip.jpg" alt="Image" class="img-fluid">
 							</figure>
-							<h3 class="name">Peter Conor</h3>
+							<h3 class="name">Arin McDonnell</h3>
 							<blockquote>
-								<p>&ldquo;Unforgettable memories were crafted by Tom Njogu Safaris, turning our trip into an extraordinary tale&rdquo;</p>
+								<p>&ldquo;So happy we met you and had you as our guide in Lewa
+									I hope our paths  cross again for another guided experience.
+									&rdquo;</p>
 							</blockquote>
 						</div>
 
-						<div class="testimonial mx-auto">
-							<figure class="img-wrap">
-								<img src="images/logopip.jpg" alt="Image" class="img-fluid">
-							</figure>
-							<h3 class="name">Elaine Musyoka</h3>
-							<blockquote>
-								<p>&ldquo;Choosing Tom Njogu Safaris was a game-changer - their personalized approach redefined our travel expectations.&rdquo;</p>
-							</blockquote>
-						</div>
+					
 
 					</div>
 
