--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					<p>We focus on giving you safari experience worth your money and of a lifetime
 						We offer different packages to suit different interest and budget.
 						We're selling guided safaris.
-						The guided destinations are;</p>
+						Destinations;</p>
 				</div>
 			</div>
 			<div class="row align-items-stretch">
